# mobilis

./: .gitignore  README.md  pyproject.toml
.github/workflows/: docs.yml
docs/: zensical.toml
docs/content/: explore.md  go.md  index.md  installation.md  show.md
src/mobilis/: __init__.py  __main__.py  cli.py  explore.py  go.py  info.py  show.py  tui.py
