[project]
name = "mobilis"
version = "0.0.1"
description = "Visualize public transportation information from GTFS feeds in the terminal."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Fabián Abarca Calderón", email = "ensinergia@gmail.com" }]
requires-python = ">=3.10"
keywords = [
    "gtfs",
    "transit",
    "public-transportation",
    "cli",
    "tui",
    "terminal",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Terminals",
    "Topic :: Utilities",
]
dependencies = ["rich>=13.7", "textual>=0.58"]

[project.urls]
Homepage = "https://github.com/fabianabarca/mobilis"
Issues = "https://github.com/fabianabarca/mobilis/issues"

[project.scripts]
mobilis = "mobilis.cli:main"

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"
